# cutter

./: .appveyor.yml  .dockerignore  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  .travis.yml.disabled  CMakeLists.txt  CONTRIBUTING.md  Cutter.pro  CutterConfig.h.meson.in  PULL_REQUEST_TEMPLATE.md  README.md  README_Contribution.md  SECURITY.md  Untitled2.ipynb  Untitled3.ipynb  _clang-format  build.bat  build.sh  build_cutter.sh  build_rest.sh  circular queue.c  crowdin.yml  docker.sh  hdiutil-debug.sh  meson.py  meson_options.txt  org.radare.Cutter.appdata.xml  prepare_r2.bat
bindings/: meson.build
bindings/CutterBindings/: meson.build
src/: AnalTask.cpp  AnalTask.h  AnalThread.cpp  AnalThread.h  CMakeLists.txt  CodeColorParse.cpp  CodeColorParse.h  Cutter.appdata.xml  Cutter.astylerc  Cutter.cpp  Cutter.cpp.orig  Cutter.desktop  Cutter.h  Cutter.pro  CutterApplication.cpp  CutterApplication.h  CutterConfig.h.in  Iaito.pro  Info.plist  Main.cpp  MainWindow.cpp  MainWindow.cpp.orig  MainWindow.h  MainWindow.ui  RadareWebServer.cpp  RunScriptTask.cpp  RunScriptTask.h  SyntaxColor.c  SyntaxColor.h  analthread.cpp  analthread.h  createnewdialog.cpp  createnewdialog.h  createnewdialog.ui  cutter  cutter.1  cutter.astylerc  cutter.cpp  cutter.desktop  cutter.h  (+44 more)
src/apple/: Info.plist
src/bindings/: bindings.h  bindings.txt.in  bindings.xml  bindings.xml.in  src_list.py
src/cmake/: BundledRadare2.cmake  BundledRizin.cmake  CutterConfig.cmake  CutterInstallDirs.cmake  DisallowInSource.cmake  FindBreakpad.cmake  FindGraphviz.cmake  FindPySide2.cmake  FindRadare2.cmake  FindShiboken2.cmake  Packaging.cmake  QMakeProParse.cmake  Translations.cmake  WindowsBundlePython.cmake  WindowsBundleQt.cmake  bFindShiboken2.cmake
src/common/: AddressableItemModel.cpp  AddressableItemModel.h  AnalTask.cpp  AnalTask.h  AnalysisTask.cpp  AnalysisTask.h  AsyncTask.cpp  AsyncTask.h  BasicBlockHighlighter.cpp  BasicBlockHighlighter.h  BasicInstructionHighlighter.cpp  BasicInstructionHighlighter.h  BinaryTrees.h  BugReporting.cpp  BugReporting.h  CachedFontMetrics.h  ColorSchemeFileSaver.cpp  ColorSchemeFileSaver.h  ColorThemeWorker.cpp  ColorThemeWorker.h  Colors.cpp  Colors.h  CommandTask.cpp  CommandTask.h  Common.pri  Configuration.cpp  Configuration.h  CrashHandler.cpp  CrashHandler.h  CutterLayout.cpp  CutterLayout.h  CutterSeekable.cpp  CutterSeekable.h  Decompiler.cpp  Decompiler.h  DecompilerHighlighter.cpp  DecompilerHighlighter.h  DirectionalComboBox.cpp  DirectionalComboBox.h  DisassemblyPreview.cpp  (+62 more)
src/core/: Basefind.cpp  Basefind.h  BinDiff.cpp  BinDiff.h  Core.pri  Cutter.cpp  Cutter.h  CutterCommon.h  CutterDescriptions.h  CutterJson.cpp  CutterJson.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  RizinCpp.cpp  RizinCpp.h
src/data/: constants.txt
src/dialogs/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ArenaInfoDialog.cpp  ArenaInfoDialog.h  ArenaInfoDialog.ui  AsmOptionsDialog.cpp  AsmOptionsDialog.h  AsmOptionsDialog.ui  AsmoptionsDialog.cpp  AsyncTaskDialog.cpp  AsyncTaskDialog.h  AsyncTaskDialog.ui  AttachProcDialog.cpp  AttachProcDialog.h  AttachProcDialog.ui  Base64EnDecodedWriteDialog.ui  BreakpointsDialog.cpp  BreakpointsDialog.h  BreakpointsDialog.ui  CommentsDialog.cpp  CommentsDialog.h  CommentsDialog.ui  ConstNameDialog.cpp  ConstNameDialog.h  ConstNameDialog.ui  CreateNewDialog.cpp  CreateNewDialog.h  CreateNewDialog.ui  CreatenewDialog.cpp  CreatenewDialog.h  CreatenewDialog.ui  Dialogs.pri  DuplicateFromOffsetDialog.ui  EditFunctionDialog.cpp  EditFunctionDialog.h  EditFunctionDialog.ui  EditInstructionDialog.cpp  EditInstructionDialog.h  EditInstructionDialog.ui  (+122 more)
src/html/: bar.html  fcn_graph.html  fcn_radar.html  graph.html  radar.html  stats.html
src/img/: Enso copy.icns  Enso.icns  Logo simple white.xcf  Logo simple.xcf  Logo.xcf  cutter.icns  cutter.rc
src/macos/: Cutter  Cutter.sh  Info.plist
src/menus/: AddressableItemContextMenu.cpp  AddressableItemContextMenu.h  DecompilerContextMenu.cpp  DecompilerContextMenu.h  DisassemblyContextMenu.cpp  DisassemblyContextMenu.h  FlirtContextMenu.cpp  FlirtContextMenu.h  Menus.pri
src/plugins/: CutterPlugin.h  CutterPythonPlugin.cpp  CutterPythonPlugin.h  CutterSamplePlugin.cpp  CutterSamplePlugin.h  PluginManager.cpp  PluginManager.h  PluginSample.pro  Plugins.pri  pluginSample.py  plugin_sample.py  sample_python.py
src/python/: cutter.py  cutter_ipykernel.py  cutter_jupyter.py  cutter_plugin.py  reg_qtres_importer.py
src/test/: AutoTest.h  CMakeLists.txt  CutterTest.pro  TestHexdumpWidget.cpp  main.cpp
src/translations/: cutter_ru.qm  cutter_ru.ts
src/utils/: AsyncTask.cpp  AsyncTask.h  CachedFontMetrics.h  ColorSchemeFileSaver.cpp  Colors.cpp  Colors.h  CommandServer.cpp  CommandServer.h  CommandTask.h  Configuration.cpp  Configuration.h  FunctionsTask.h  Helpers.cpp  Helpers.h  HexAsciiHighlighter.cpp  HexAsciiHighlighter.h  HexHighlighter.cpp  HexHighlighter.h  Highlighter.cpp  Highlighter.h  InitialOptions.h  JsonModel.cpp  JsonModel.h  JsonTreeItem.cpp  JsonTreeItem.h  JupyterConnection.cpp  JupyterConnection.h  MdHighlighter.cpp  MdHighlighter.h  NestedIPyKernel.cpp  NestedIPyKernel.h  ProgressIndicator.cpp  PythonAPI.cpp  PythonAPI.h  PythonManager.cpp  PythonManager.h  R2Task.cpp  RichTextPainter.cpp  RichTextPainter.h  StringsTask.cpp  (+7 more)
src/widgets/: AddressableDockWidget.cpp  AddressableDockWidget.h  AddressableItemList.h  BacktraceWidget.cpp  BacktraceWidget.h  BacktraceWidget.ui  BoolToggleDelegate.cpp  BoolToggleDelegate.h  BreakpointWidget.cpp  BreakpointWidget.h  BreakpointWidget.ui  CallGraph.cpp  CallGraph.h  ClassesWidget.cpp  ClassesWidget.h  ClassesWidget.ui  CodeGraphic.cpp  CodeGraphic.h  ColorPicker.cpp  ColorPicker.h  ColorPicker.ui  ColorSchemePrefWidget.cpp  ColorSchemePrefWidget.h  ColorSchemePrefWidget.ui  ColorThemeComboBox.cpp  ColorThemeComboBox.h  ColorThemeListView.cpp  ColorThemeListView.h  ComboQuickFilterView.cpp  ComboQuickFilterView.h  CommentsWidget.cpp  CommentsWidget.h  CommentsWidget.ui  ConsoleWidget.cpp  ConsoleWidget.h  ConsoleWidget.ui  (+266 more)
(+423 files in other folders)
